RESOLVED FIXED 229737
Regression(r272607) Removal of alert()/confirm() in third-party iframes breaks Salesforce
https://bugs.webkit.org/show_bug.cgi?id=229737
Summary Regression(r272607) Removal of alert()/confirm() in third-party iframes break...
Chris Dumez
Reported 2021-08-31 14:24:13 PDT
Removal of alert()/confirm() in third-party iframes breaks Salesforce.
Attachments
Patch (13.65 KB, patch)
2021-08-31 14:38 PDT, Chris Dumez
no flags
Patch (14.23 KB, patch)
2021-08-31 17:18 PDT, Chris Dumez
ews-feeder: commit-queue-
Chris Dumez
Comment 1 2021-08-31 14:24:23 PDT
Chris Dumez
Comment 2 2021-08-31 14:38:03 PDT
Chris Dumez
Comment 3 2021-08-31 17:18:15 PDT
EWS
Comment 4 2021-08-31 20:13:39 PDT
ChangeLog entry in Source/WebCore/ChangeLog contains OOPS!.
Chris Dumez
Comment 5 2021-09-01 07:54:50 PDT
Alexey Proskuryakov
Comment 6 2021-10-06 17:31:04 PDT
*** Bug 231272 has been marked as a duplicate of this bug. ***
Chris Dumez
Comment 7 2021-10-19 07:39:02 PDT
*** Bug 231944 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.