Regression(r272607) Removal of alert()/confirm() in third-party iframes breaks Salesforce https://bugs.webkit.org/show_bug.cgi?id=229737 <rdar://82591122>

Source/WebCore:

Unreviewed, Revert behavior change made in r272607 as it broke Salesforce. My understanding is that
Chrome had to revert this too.

Tests: http/tests/security/cross-origin-js-prompt-allowed.html
       http/tests/security/same-origin-different-domain-js-prompt-allowed.html

* page/DOMWindow.cpp:
(WebCore::DOMWindow::alert):
(WebCore::DOMWindow::confirmForBindings):
(WebCore::DOMWindow::prompt):

LayoutTests:

Unreviewed, Update existing tests to reflect behavior change.

* http/tests/security/cross-origin-js-prompt-allowed-expected.txt: Added.
* http/tests/security/cross-origin-js-prompt-allowed.html: Renamed from LayoutTests/http/tests/security/cross-origin-js-prompt-forbidden.html.
* http/tests/security/cross-origin-js-prompt-forbidden-expected.txt: Removed.
* http/tests/security/resources/cross-origin-js-prompt-allowed.html: Renamed from LayoutTests/http/tests/security/resources/cross-origin-js-prompt-forbidden.html.
* http/tests/security/same-origin-different-domain-js-prompt-allowed-expected.txt: Added.
* http/tests/security/same-origin-different-domain-js-prompt-allowed.html: Renamed from LayoutTests/http/tests/security/same-origin-different-domain-js-prompt-forbidden.html.
* http/tests/security/same-origin-different-domain-js-prompt-forbidden-expected.txt: Removed.

Canonical link: https://commits.webkit.org/241180@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281848 268f45cc-cd09-0410-ab3c-d52691b4dbfc