Source/WebCore/page/DOMWindow.cpp
@@ -1117,11 +1117,6 @@ void DOMWindow::alert(const String& message)
         return;
     }
 
-    if (!document->securityOrigin().isSameOriginDomain(document->topDocument().securityOrigin())) {
-        printErrorMessage("Use of window.alert is not allowed in different origin-domain iframes.");
-        return;
-    }
-
     document->updateStyleIfNeeded();
 #if ENABLE(POINTER_LOCK)
     page->pointerLockController().requestPointerUnlock();
@@ -1151,11 +1146,6 @@ bool DOMWindow::confirmForBindings(const String& message)
         return false;
     }
 
-    if (!document->securityOrigin().isSameOriginDomain(document->topDocument().securityOrigin())) {
-        printErrorMessage("Use of window.confirm is not allowed in different origin-domain iframes.");
-        return false;
-    }
-
     document->updateStyleIfNeeded();
 #if ENABLE(POINTER_LOCK)
     page->pointerLockController().requestPointerUnlock();
@@ -1182,11 +1172,6 @@ String DOMWindow::prompt(const String& message, const String& defaultValue)
 
     if (!page->arePromptsAllowed()) {
         printErrorMessage("Use of window.prompt is not allowed while unloading a page.");
-        return String();
-    }
-
-    if (!document->securityOrigin().isSameOriginDomain(document->topDocument().securityOrigin())) {
-        printErrorMessage("Use of window.prompt is not allowed in different origin-domain iframes.");
         return String();
     }
 
